--- a/index.html
+++ b/index.html
@@ -2,13 +2,67 @@
 <html lang="en">
     <head>
         <title>KyawZinT Page</title>
+        <style>
+            html * {
+                font-family: "Arial"
+            }
+            .profile_header {
+                text-align: center;
+              /*  background-color: #545463; */
+                color: white;
+                padding-top: 4vh;
+                padding-bottom: 4vh;
+                height: 100%;
+                background-image : url("dark-low-poly-background_1048-7971.webp");
+            }
+
+            h2 {
+                color: black;
+                font-size: medium;
+            }
+
+            p {
+                margin-top: 0pt;
+                font-size: small;
+            }
+
+            body {
+                background-image: linear-gradient(to bottom right, #827097 , #6b8eca);
+            }
+
+            .content-cell {
+                width: 50%;
+                padding-left: 1rem;
+                padding-left: 1rem;
+                background-color: white;
+            }
+        </style>
     </head>
 <body>
-    <h1> Hello World </h1>
-    <p>
-        Welcome to my page! <br/>
-        You will find information about me here.        
-    </p> 
-    <img src="chicken line up.png"> </img>
+    <table style="width: 100%; height: 80%">
+        <tr>
+            <td style = "width: 50%">
+                <div class = "profile_header" >
+                    <img src = "profile.png" alt = "KyawZinT Profile Picture" style="width: 100px; border-radius: 50%;" />
+                    <br />
+                    <h1> Kyaw Zin Thein </h1>
+                    Computer Science student <br />
+                </div>
+            </td>
+            <td class="content-cell">
+                <h2>MUSIC ENJOYER</h2>
+                 <p>
+                     Love BiBi
+                </p>
+
+                <h2> CSGO ENJOYER </h2>
+                <p>
+                    Love to play AWP. I hate high PING!
+                </p>
+            </td>
+        </tr>
+
+    </tbody>
+    </table>
 </body>
 </html>
