--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>KyawZinT Page</title>
+        <title>Product Table</title>
         <style>
             html * {
                 font-family: "Arial"
@@ -19,6 +19,7 @@
             h2 {
                 color: black;
                 font-size: medium;
+                margin-bottom: 0pt;
             }
 
             p {
@@ -62,7 +63,6 @@
             </td>
         </tr>
 
-    </tbody>
-    </table>
+    </table> 
 </body>
 </html>
