--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Product Table</title>
+        <title>Profile</title>
         <style>
             html * {
                 font-family: "Arial"
